# rusty-magento

./: Cargo.toml  LICENSE  README.md  build.rs
media/: test.html
src/: lib.rs  main.rs  service.rs
src/catalog/: core.rs  local.rs  mod.rs
src/checkout/: core.rs  mod.rs
templates/: index.hbs
